minor :docs(README): corrige la coloration des blocs de code et conformité markdownlint implementaitons, Corrige erreurs markdownlint dans le README (MD040)

--- a/public/404.html
+++ b/public/404.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Page non trouvée - TAKTO" />
     <title>404 - Page non trouvée | TAKTO</title>
-    <link rel="stylesheet" href="app/css/styles.css" />
+    <link rel="stylesheet" href="../src/css/styles.css" />
     <meta property="og:title" content="404 - Page non trouvée | TAKTO" />
     <meta
       property="og:description"
       content="La page demandée n'existe pas sur TAKTO."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/public/TAKTO BLACK.svg" />
+    <meta property="og:image" content="TAKTO BLACK.svg" />
     <meta property="og:url" content="https://takto.vercel.app//404.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="404 - Page non trouvée | TAKTO" />
@@ -20,7 +20,7 @@
       name="twitter:description"
       content="La page demandée n'existe pas sur TAKTO."
     />
-    <meta name="twitter:image" content="assets/public/TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="TAKTO BLACK.svg" />
   </head>
   <body>
     <a href="#main-content" class="skip-link">Aller au contenu principal</a>
@@ -29,7 +29,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="assets/public/TAKTO BLACK.svg"
+              src="TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
