--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="TAKTO - Tableau de veille technologique minimaliste et accessible pour développeurs."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app/css/styles.css" />
+    <link rel="stylesheet" href="../src/css/styles.css" />
     <title>TAKTO - Dashboard</title>
     <meta property="og:title" content="TAKTO - Dashboard" />
     <meta
@@ -16,7 +16,7 @@
       content="Tableau de veille technologique minimaliste et accessible pour développeurs."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/public/TAKTO BLACK.svg" />
+    <meta property="og:image" content="TAKTO BLACK.svg" />
     <meta property="og:url" content="https://takto.vercel.app/index.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TAKTO - Dashboard" />
@@ -24,7 +24,7 @@
       name="twitter:description"
       content="Tableau de veille technologique minimaliste et accessible pour développeurs."
     />
-    <meta name="twitter:image" content="assets/public/TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="TAKTO BLACK.svg" />
   </head>
   <body>
     <noscript>
@@ -48,7 +48,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="assets/public/TAKTO BLACK.svg"
+              src="TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
@@ -1027,6 +1027,6 @@
         </div>
       </footer>
     </div>
-    <script src="app/js/app.js" defer></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
