--- a/public/team.html
+++ b/public/team.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="TAKTO - FAQ du projet de veille technologique."
+      content="TAKTO - Équipe du projet de veille technologique."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app/css/styles.css" />
-    <title>TAKTO - FAQ</title>
-    <meta property="og:title" content="TAKTO - FAQ" />
+    <link rel="stylesheet" href="../src/css/styles.css" />
+    <title>TAKTO - Équipe</title>
+    <meta property="og:title" content="TAKTO - Équipe" />
     <meta
       property="og:description"
-      content="FAQ du projet de veille technologique TAKTO."
+      content="Équipe du projet de veille technologique TAKTO."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/public/TAKTO BLACK.svg" />
-    <meta property="og:url" content="https://takto.vercel.app/faq.html" />
+    <meta property="og:image" content="TAKTO BLACK.svg" />
+    <meta property="og:url" content="https://takto.vercel.app/team.html" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TAKTO - FAQ" />
+    <meta name="twitter:title" content="TAKTO - Équipe" />
     <meta
       name="twitter:description"
-      content="FAQ du projet de veille technologique TAKTO."
+      content="Équipe du projet de veille technologique TAKTO."
     />
-    <meta name="twitter:image" content="assets/public/TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="TAKTO BLACK.svg" />
   </head>
   <body>
     <noscript>
@@ -48,7 +48,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="assets/public/TAKTO BLACK.svg"
+              src="TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
@@ -60,8 +60,8 @@
             <ul>
               <li><a href="index.html">Dashboard</a></li>
               <li><a href="readme.html">Readme</a></li>
-              <li><a href="faq.html" aria-current="page">FAQ</a></li>
-              <li><a href="team.html">Équipe</a></li>
+              <li><a href="faq.html">FAQ</a></li>
+              <li><a href="team.html" aria-current="page">Équipe</a></li>
               <li><a href="accessibility.html">Accessibilité</a></li>
             </ul>
           </nav>
@@ -85,8 +85,8 @@
             <ul>
               <li><a href="index.html">Dashboard</a></li>
               <li><a href="readme.html">Readme</a></li>
-              <li><a href="faq.html" aria-current="page">FAQ</a></li>
-              <li><a href="team.html">Équipe</a></li>
+              <li><a href="faq.html">FAQ</a></li>
+              <li><a href="team.html" aria-current="page">Équipe</a></li>
               <li><a href="accessibility.html">Accessibilité</a></li>
             </ul>
             <section>
@@ -728,70 +728,88 @@
           role="main"
         >
           <section class="content-section">
-            <h2>FAQ <span aria-hidden="true">❓</span></h2>
+            <h2>L'équipe TAKTO <span aria-hidden="true">👥</span></h2>
             <p>
-              Bienvenue dans la FAQ de TAKTO ! Retrouvez ici les réponses aux
-              questions fréquentes sur le projet, son accessibilité et son
-              utilisation. <span aria-hidden="true">💡</span>
+              TAKTO est un projet scolaire collaboratif, imaginé et réalisé par
+              cinq étudiants passionnés. Chacun a apporté sa propre expertise et
+              créativité pour faire de ce tableau de veille un outil unique,
+              accessible et utile à tous ! <span aria-hidden="true">✨</span>
             </p>
-            <div class="faq-list">
-              <div class="faq-card">
-                <h4>🧐 Qu'est-ce que TAKTO ?</h4>
-                <p>
-                  TAKTO est un tableau de veille technologique minimaliste,
-                  statique et accessible, conçu pour centraliser et partager des
-                  ressources utiles aux développeurs.
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>♿ Pourquoi l'accessibilité est-elle une priorité ?</h4>
-                <p>
-                  Nous avons conçu TAKTO pour être utilisable par tous, y
-                  compris les personnes en situation de handicap. Navigation
-                  clavier, contraste élevé, structure sémantique et
-                  compatibilité avec les lecteurs d'écran sont au cœur du
-                  projet.
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>🌗 Comment changer le thème clair/sombre ?</h4>
-                <p>
-                  Utilisez le bouton en bas à droite de l'écran pour basculer
-                  entre le mode clair et sombre. Votre choix est mémorisé pour
-                  les prochaines visites !
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>🔗 Puis-je ajouter mes propres liens ?</h4>
-                <p>
-                  Oui ! Si JavaScript est activé, un formulaire vous permet
-                  d'ajouter, rechercher et supprimer vos liens personnels,
-                  stockés localement dans votre navigateur.
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>🛡️ Mes données sont-elles privées ?</h4>
-                <p>
-                  Absolument. Toutes vos données restent sur votre appareil,
-                  dans le stockage local du navigateur. Aucun envoi vers un
-                  serveur.
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>📱 TAKTO est-il responsive ?</h4>
-                <p>
-                  Oui, l'interface s'adapte à tous les écrans, du mobile au
-                  grand écran, pour une expérience optimale partout.
-                </p>
-              </div>
-              <div class="faq-card">
-                <h4>🧑‍💻 Qui est derrière TAKTO ?</h4>
-                <p>
-                  Une équipe d'étudiants passionnés, réunis pour un projet
-                  scolaire, chacun apportant sa touche personnelle !
-                </p>
-              </div>
-            </div>
+            <ul
+              style="
+                list-style: none;
+                padding: 0;
+                margin: 2rem 0;
+                display: flex;
+                flex-direction: column;
+                gap: 1.5rem;
+              "
+            >
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Icham</strong> <span aria-hidden="true">🧑‍💼</span> —
+                Coordination, accessibilité et design. Toujours à l'écoute pour
+                garantir une expérience inclusive !
+              </li>
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Samy</strong> <span aria-hidden="true">💡</span> — Idées
+                innovantes et veille technologique. Il a enrichi TAKTO de
+                ressources et d'astuces pratiques.
+              </li>
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Wissem</strong> <span aria-hidden="true">🛠️</span> —
+                Développement et optimisation. Toujours prêt à améliorer la
+                performance et la sobriété numérique.
+              </li>
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Victor</strong> <span aria-hidden="true">🎨</span> —
+                Design minimaliste et expérience utilisateur. Il a veillé à la
+                clarté et à l'élégance de l'interface.
+              </li>
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Maxime</strong> <span aria-hidden="true">🔍</span> —
+                Relecture, tests et documentation. Il s'est assuré que TAKTO
+                soit fiable et bien documenté.
+              </li>
+            </ul>
+            <p>
+              Merci à tous pour votre implication et votre bonne humeur tout au
+              long de ce projet ! <span aria-hidden="true">🙌</span>
+            </p>
           </section>
         </main>
       </div>
@@ -808,6 +826,6 @@
         </div>
       </footer>
     </div>
-    <script src="app/js/app.js" defer></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
