fix: uniformise imports CSS/JS, ajoute manifest.json et support PWA

--- a/public/faq.html
+++ b/public/faq.html
@@ -8,7 +8,8 @@
       content="TAKTO - FAQ du projet de veille technologique."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TAKTO - FAQ</title>
     <meta property="og:title" content="TAKTO - FAQ" />
     <meta
@@ -808,6 +809,6 @@
         </div>
       </footer>
     </div>
-    <script src="../src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
   </body>
 </html>
