--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="TAKTO - Tableau de veille technologique minimaliste et accessible pour développeurs."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TAKTO - Dashboard</title>
     <meta property="og:title" content="TAKTO - Dashboard" />
     <meta
@@ -1027,6 +1027,6 @@
         </div>
       </footer>
     </div>
-    <script src="../src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
   </body>
 </html>
