--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Page non trouvée - TAKTO" />
     <title>404 - Page non trouvée | TAKTO</title>
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <meta property="og:title" content="404 - Page non trouvée | TAKTO" />
     <meta
       property="og:description"
@@ -21,6 +21,7 @@
       content="La page demandée n'existe pas sur TAKTO."
     />
     <meta name="twitter:image" content="TAKTO BLACK.svg" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <a href="#main-content" class="skip-link">Aller au contenu principal</a>
