--- a/public/accessibility.html
+++ b/public/accessibility.html
@@ -8,7 +8,8 @@
       content="TAKTO - Accessibilité du projet de veille technologique."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TAKTO - Accessibilité</title>
     <meta property="og:title" content="TAKTO - Accessibilité" />
     <meta
@@ -886,6 +887,6 @@
         </div>
       </footer>
     </div>
-    <script src="../src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
   </body>
 </html>
