--- a/public/readme.html
+++ b/public/readme.html
@@ -8,7 +8,7 @@
       content="TAKTO - Readme du projet de veille technologique."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TAKTO - Readme</title>
     <meta property="og:title" content="TAKTO - Readme" />
     <meta
@@ -1099,6 +1099,6 @@
         </p>
       </footer>
     </div>
-    <script src="../src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
   </body>
 </html>
