--- a/public/team.html
+++ b/public/team.html
@@ -8,7 +8,8 @@
       content="TAKTO - Équipe du projet de veille technologique."
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TAKTO - Équipe</title>
     <meta property="og:title" content="TAKTO - Équipe" />
     <meta
@@ -826,6 +827,6 @@
         </div>
       </footer>
     </div>
-    <script src="../src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
   </body>
 </html>
